getting the carousel to work and adding home page buttons

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
       <li><a href="#">References</a></li>
     </ul>
   </nav>
-  <a href="#">
+  <a [routerLink]="['home']">
     <img src="assets/images/happy-paws-logo.png" alt="Happy Paws Rescue Logo" class="logo"/>
   </a>
 </div>
