--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -22,14 +22,14 @@
     margin-left: 13%      !important;
 }
 .slide-1-header {
-    color: #192231 !important;
+    color: #112d32 !important;
     font-size: 92px;
-    font-family: 'Lobster', cursive;
+    font-family: "Lobster", cursive;
 }
 .slide-1-text {
-    color: #192231 !important;
+    color: #112d32 !important;
     font-size: 34px;
-    font-family: 'Lobster', cursive;
+    font-family: "Lobster", cursive;
     margin-top: 20px;
 }
 
@@ -49,12 +49,12 @@
 .slide-2-header {
     color: #fff !important;
     font-size: 84px;
-    font-family: 'Lobster', cursive;
+    font-family: "Lobster", cursive;
 }
 .slide-2-text {
     color: #fff !important;
     font-size: 34px;
-    font-family: 'Lobster', cursive;
+    font-family: "Lobster", cursive;
     margin-top: 20px;
 }
 
@@ -72,14 +72,14 @@
     margin-left: 10%       !important;
 }
 .slide-3-header {
-    color: #494e6b !important;
+    color: #112d32 !important;
     font-size: 68px;
-    font-family: 'Lobster', cursive;
+    font-family: "Lobster", cursive;
 }
 .slide-3-text {
-    color: #494e6b !important;
+    color: #112d32 !important;
     font-size: 30px;
-    font-family: 'Lobster', cursive;
+    font-family: "Lobster", cursive;
     margin-top: 20px;
 }
 
@@ -99,12 +99,12 @@
 .slide-4-header {
     color: #fff !important;
     font-size: 80px;
-    font-family: 'Lobster', cursive;
+    font-family: "Lobster", cursive;
 }
 .slide-4-text {
     color: #fff !important;
     font-size: 30px;
-    font-family: 'Lobster', cursive;
+    font-family: "Lobster", cursive;
     margin-top: 20px;
 }
 
@@ -122,13 +122,13 @@
     margin-left: 10%      !important;
 }
 .slide-5-header {
-    color: #192231 !important;
+    color: #112d32 !important;
     font-size: 80px;
-    font-family: 'Lobster', cursive;
+    font-family: "Lobster", cursive;
 }
 .slide-5-text {
-    color: #192231 !important;
+    color: #112d32 !important;
     font-size: 30px;
-    font-family: 'Lobster', cursive;
+    font-family: "Lobster", cursive;
     margin-top: 20px;
 }
