--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,6 +1,6 @@
 <ngb-carousel class="carousel">
   <template class="slide-all" ngbSlide>
-    <img class="slide-image" src="../assets/images/carousel-slides/cat-4.1.png" alt="ADOPT!">
+    <img class="slide-image" src="../assets/images/carousel-slides/cat-4.1.png" alt="Why Rescue?">
     <div class="slide-1-caption">
       <!-- <a [routerLink]="['/about']" class="slide-1-link"> -->
         <h3 class="slide-1-header">Why should you adopt?</h3>
@@ -9,7 +9,7 @@
     </div>
   </template>
   <template class="slide-all" ngbSlide>
-    <img class="slide-image" src="../assets/images/carousel-slides/dog-2.1.png" alt="Cute Dog">
+    <img class="slide-image" src="../assets/images/carousel-slides/dog-2.1.png" alt="Adoptable Dogs">
     <div class="slide-2-caption">
       <!-- <a [routerLink]="['/adoption/dogs']" class="slide-2-link"> -->
         <h3 class="slide-2-header">Ready for a new furever friend?</h3>
@@ -18,7 +18,7 @@
     </div>
   </template>
   <template class="slide-all" ngbSlide>
-    <img class="slide-image" src="../assets/images/carousel-slides/cat-2.1.png" alt="Looking Cat">
+    <img class="slide-image" src="../assets/images/carousel-slides/cat-2.1.png" alt="Adoptable Cats">
     <div class="slide-3-caption">
       <!-- <a [routerLink]="['/adoption/cats']" class="slide-3-link"> -->
         <h3 class="slide-3-header">Rescue cats are the best breed.</h3>
@@ -27,7 +27,7 @@
     </div>
   </template>
   <template class="slide-all" ngbSlide>
-    <img class="slide-image" src="../assets/images/carousel-slides/dog-1.1.png" alt="Furry Scurry Dog">
+    <img class="slide-image" src="../assets/images/carousel-slides/dog-1.1.png" alt="Furry Scurry">
     <div class="slide-4-caption">
       <a href="http://ddfl.org/even/furry-scurry/" class="slide-4-link">
         <h3 class="slide-4-header">Want to help homeless pets?</h3>
@@ -36,7 +36,7 @@
     </div>
   </template>
   <template class="slide-all" ngbSlide>
-    <img class="slide-image" src="../assets/images/carousel-slides/cat-3.1.png" alt="Cats and Basketball">
+    <img class="slide-image" src="../assets/images/carousel-slides/cat-3.1.png" alt="Pet Search">
     <div class="slide-5-caption">
       <!-- <a [routerLink]="['/contact']" class="slide-5-link"> -->
         <h3 class="slide-5-header">Have something specific in mind?</h3>
