--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,12 +1,14 @@
 .wrapper {
-    border-bottom: 7px solid #D1DBBD;
-    background-color: #193441
+    border-bottom: 7px solid #6e6658;
+    background-color: #112d32
 }
 .logo {
     height: 90px;
     width: auto;
     float: center;
     padding-left: 50px;
+    margin-top: 30px;
+    margin-bottom: 5px;
 }
 /*---------------------MAIN NAV STYLING-----------------------*/
 .main-nav {
