adding a footer and a couple pictures

--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -20,6 +20,7 @@
     bottom: 30%           !important;
     margin-right: 45%     !important;
     margin-left: 13%      !important;
+    transform: translate(0 , 10%)
 }
 .slide-1-header {
     color: #112d32 !important;
