--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,8 +1,9 @@
 .content-wrapper {
-    background-color: #EEEFF7
+    background-color: #EEEFF7;
 }
 .container {
     padding-top: 40px;
+    padding-bottom: 40px;
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
