footer and carousel work

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,19 +1,25 @@
-<footer>
+<footer class="footer-nav">
   <div class="wrapper">
-    <div class="container">
-      <div class="row">
-        <div class="col col-1-footer">
-          <h2 class="shelter-links">Top Shelters in Colorado</h2>
-          <ul class="shelter-list">
-            <li class="shelter-item"><a href="http://www.ddfl.org" class="shelter-name">Denver Dumb Friends League</a></li>
-            <li class="shelter-item"><a href="http://www.maxfund.org" class="shelter-name">MaxFund</a></li>
-            <li class="shelter-item"><a href="http://www.denvergov.org" class="shelter-name">Denver Animal Shelter</a></li>
-            <li class="shelter-item"><a href="http://catcaresociety.org" class="shelter-name">Cat Care Society</a></li>
-            <li class="shelter-item"><a href="http://bigdogshugepaws.com" class="shelter-name">Big Dogs Huge Paws</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>     
+    <nav class="top-co-shelters">
+      <h2 class="bottom-nav-header">Top Shelters in Colorado</h2>
+      <div class="underline"></div>
+      <ul class="shelter-list">
+        <li class="shelter-item"><a href="http://www.ddfl.org" class="shelter-name">Denver Dumb Friends League</a></li>
+        <li class="shelter-item"><a href="http://www.maxfund.org" class="shelter-name">MaxFund</a></li>
+        <li class="shelter-item"><a href="http://www.denvergov.org" class="shelter-name">Denver Animal Shelter</a></li>
+        <li class="shelter-item"><a href="http://catcaresociety.org" class="shelter-name">Cat Care Society</a></li>
+        <li class="shelter-item"><a href="http://bigdogshugepaws.com" class="shelter-name">Big Dogs Huge Paws</a></li>
+      </ul>
+    </nav>
+    <nav class="top-adoption-websites">
+      <h2 class="bottom-nav-header">Top Adoption Websites</h2>
+      <div class="underline"></div>
+      <ul class="website-list">
+        <li class="website-item"><a href="http://www.petfinder.com" class="website-name">Petfinder</a></li>
+        <li class="website-item"><a href="http://www.adoptapet.com" class="website-name">Adopt-a-Pet.com</a></li>
+        <li class="website-item"><a href="https://www.aspca.org/adopt-pet/adoptable-dogs-your-local-shelter">ASPCA Adoptions</a></li>
+      </ul>
+    </nav>
+  </div>   
 </footer>
 
