--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -36,7 +36,7 @@ p {
 
 /*------------Button Styling-------------*/
 .button-learn {
-    font-family: "Lucida Sans";
+    font-family: 'Lucida Grande';
     border-radius: 8px;
     padding: 10px 10px;
     font-size: 20px;
@@ -44,21 +44,21 @@ p {
     width: 200px;
 }
 .button-adopt-dog {
-    font-family: "Lucida Sans";
+    font-family: 'Lucida Grande';   
     border-radius: 8px;
     padding: 3px 3px;
     margin-bottom: 10px;
     width: 200px
 }
 .button-adopt-cat {
-    font-family: "Lucida Sans";
+    font-family: 'Lucida Grande';    
     border-radius: 8px;
     padding: 3px 3px;
     margin-bottom: 50px;
     width: 200px
 }
 .button-pet-search {
-    font-family: "Lucida Sans";
+    font-family: 'Lucida Grande';
     border-radius: 8px;
     padding: 10px 10px;
     font-size: 20px;
