--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -4,10 +4,23 @@
     padding-top: 50px;
     padding-bottom: 50px;
 }
-.shelter-links {
+footer .underline {
+    display: block;
+    width: 100px;
+    margin: 0 0 6px 40px;
+    border: 1px solid #fff
+}
+.top-co-shelters,
+.top-adoption-websites {
+    display: inline-block;
+}
+.bottom-nav-header {
     color: white;
-    font-size: 20px;
-    text-align: center;
+    font-size: 15px;
+    text-align: left;
+    margin-left: 40px;
+    text-transform: uppercase;
+    font-family: 'Lucida Grande';
 }
 .shelter-list {
     list-style-type: none;
@@ -15,6 +28,7 @@
     text-align: left;
 }
 .shelter-name {
+    font-family: 'Lucida Grande';
     text-decoration: none;
     color: white;
     text-align: left;
