--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,17 @@
 <footer class="footer-nav">
-  <div class="wrapper">
+  <img src="../assets/images/footer-cat-2.png" class="footer-image-cat">
+   <nav class="lower-nav">
+      <h2 class="bottom-nav-header">Navigate</h2>
+      <div class="underline"></div>
+      <ul class="nav-list">
+        <li class="nav-item">Why Rescue?</li>
+        <li class="nav-item">Available Pets</li>
+        <li class="nav-item">Pet Search</li>
+        <li class="nav-item">References</li>
+      </ul>
+    </nav>
     <nav class="top-co-shelters">
-      <h2 class="bottom-nav-header">Top Shelters in Colorado</h2>
+      <h2 class="bottom-nav-header">Colorado Shelters</h2>
       <div class="underline"></div>
       <ul class="shelter-list">
         <li class="shelter-item"><a href="http://www.ddfl.org" class="shelter-name">Denver Dumb Friends League</a></li>
@@ -12,14 +22,18 @@
       </ul>
     </nav>
     <nav class="top-adoption-websites">
-      <h2 class="bottom-nav-header">Top Adoption Websites</h2>
+      <h2 class="bottom-nav-header">Adoption Websites</h2>
       <div class="underline"></div>
       <ul class="website-list">
         <li class="website-item"><a href="http://www.petfinder.com" class="website-name">Petfinder</a></li>
         <li class="website-item"><a href="http://www.adoptapet.com" class="website-name">Adopt-a-Pet.com</a></li>
-        <li class="website-item"><a href="https://www.aspca.org/adopt-pet/adoptable-dogs-your-local-shelter">ASPCA Adoptions</a></li>
+        <li class="website-item"><a href="https://www.aspca.org/adopt-pet/adoptable-dogs-your-local-shelter" class="website-name">ASPCA Adoptions</a></li>
+        <li class="website-item"><a href="http://www.allpaws.com" class="website-name">AllPaws</a></li>
+        <li class="website-item"><a href="http://www.pawslikeme.com" class="website-name">PawsLikeMe</a></li>
+        <li class="website-item"><a href="http://petango.com" class="website-name">Petango!</a></li>
       </ul>
-    </nav>
-  </div>   
+    </nav> 
+  <img src="../assets/images/footer-dog-2.png" class="footer-image-dog">
+  <p class="copyright">&copy; 2017 This Isn't a Real Copyright</p>  
 </footer>
 
