--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,18 +1,37 @@
-.wrapper {
+.footer-nav {
     border-top: 7px solid #6e6658;
     background-color: #112d32;
-    padding-top: 50px;
+    text-align: center;
     padding-bottom: 50px;
 }
-footer .underline {
-    display: block;
-    width: 100px;
-    margin: 0 0 6px 40px;
-    border: 1px solid #fff
+.footer-image-cat {
+    float: left;
+    height: 250px;
+    width: auto;
+    margin-top: 50px;
+    margin-left: 40px;
 }
+.footer-image-dog {
+    float: right;
+    height: 250px;
+    width: auto;
+    margin-top: 50px;
+    margin-right: 40px;
+}
+.lower-nav,
 .top-co-shelters,
 .top-adoption-websites {
+    margin-top: 80px;
     display: inline-block;
+    vertical-align: text-top;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.underline {
+    display: block;
+    width: 50px;
+    margin: 20px 0 20px 40px;
+    border: 1px solid #6e6658;
 }
 .bottom-nav-header {
     color: white;
@@ -22,14 +41,28 @@ footer .underline {
     text-transform: uppercase;
     font-family: 'Lucida Grande';
 }
-.shelter-list {
+.nav-list,
+.shelter-list,
+.website-list {
     list-style-type: none;
     color: white;
     text-align: left;
 }
-.shelter-name {
+.shelter-name,
+.website-name,
+.nav-item {
     font-family: 'Lucida Grande';
     text-decoration: none;
     color: white;
-    text-align: left;
+    font-size: 14px;
+}
+.copyright {
+    color: white;
+    text-align: center;
+    padding-top: 50px;
+    font-size: 12px;
+    font-family: 'Lucida Grande'
+}
+img {
+    vertical-align: left;
 }
