media query work

--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -31,7 +31,7 @@
     <div class="slide-4-caption">
       <a href="http://ddfl.org/even/furry-scurry/" class="slide-4-link">
         <h3 class="slide-4-header">Want to help homeless pets?</h3>
-        <p class="slide-4-text">Click to check out the "Furry Scurry" race!</p>
+        <p class="slide-4-text">Click to check out the <br/>"Furry Scurry" race!</p>
       </a>
     </div>
   </template>
