--- a/src/app/carousel/carousel.component.scss
+++ b/src/app/carousel/carousel.component.scss
@@ -23,12 +23,10 @@
 }
 .slide-1-header {
     color: #112d32 !important;
-    font-size: 600%;
     font-family: "Lobster", cursive;
 }
 .slide-1-text {
     color: #112d32 !important;
-    font-size: 3em;
     font-family: "Lobster", cursive;
     margin-top: 20px;
 }
@@ -48,12 +46,10 @@
 }
 .slide-2-header {
     color: #fff !important;
-    font-size: 6em;
     font-family: "Lobster", cursive;
 }
 .slide-2-text {
     color: #fff !important;
-    font-size: 3em;
     font-family: "Lobster", cursive;
     margin-top: 20px;
 }
@@ -73,12 +69,10 @@
 }
 .slide-3-header {
     color: #112d32 !important;
-    font-size: 4.5em;
     font-family: "Lobster", cursive;
 }
 .slide-3-text {
     color: #112d32 !important;
-    font-size: 2em;
     font-family: "Lobster", cursive;
     margin-top: 20px;
 }
@@ -98,12 +92,10 @@
 }
 .slide-4-header {
     color: #fff !important;
-    font-size: 6em;
     font-family: "Lobster", cursive;
 }
 .slide-4-text {
     color: #fff !important;
-    font-size: 2em;
     font-family: "Lobster", cursive;
     margin-top: 20px;
 }
@@ -123,56 +115,72 @@
 }
 .slide-5-header {
     color: #112d32 !important;
-    font-size: 5em;
     font-family: "Lobster", cursive;
 }
 .slide-5-text {
     color: #112d32 !important;
-    font-size: 2.5em;
     font-family: "Lobster", cursive;
     margin-top: 20px;
 }
 
-/* smartphones, iPhone, portrait 480x320 phones */
-@media screen and (min-width:320px) {
+/* ----------- slide 1 media queries ----------- */
+    /* tablet, landscape iPad, lo-res laptops ands desktops */
+@media screen and (min-width:1100px) {
   .slide-1-header {
-    font-size: 10px;
+    font-size: 80px
+  }
+}
+@media screen and (min-width:1100px) {
+  .slide-1-text {
+    font-size: 36px
+  }
+}
+/* ----------- slide 2 media queries ----------- */
+
+ @media screen and (min-width:1100px) {
+  .slide-2-header {
+    font-size: 80px
+  }
+}
+@media screen and (min-width:1100px) {
+  .slide-2-text {
+    font-size: 36px
   }
 }
 
-/* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
-@media screen and (min-width:481px) {
-  .slide-1-header {
-    font-size: 12px;
+/* ----------- slide 3 media queries ----------- */
+
+ @media screen and (min-width:1200px) {
+  .slide-3-header {
+    font-size: 65px
   }
 }
-
-/* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-@media screen and (min-width:641px) {
-  .slide-1-header {
-    font-size: 14px;
+@media screen and (min-width:1200px) {
+  .slide-3-text {
+    font-size: 32px
   }
 }
+/* ----------- slide 4 media queries ----------- */
 
-/* tablet, landscape iPad, lo-res laptops ands desktops */
-@media screen and (min-width:961px) {
-  .slide-1-header {
-    font-size: 70px
+ @media screen and (min-width:1200px) {
+  .slide-4-header {
+    font-size: 75px
   }
 }
-
-/* big landscape tablets, laptops, and desktops */
-@media screen and (min-width:1025px) {
+@media screen and (min-width:1200px) {
+  .slide-4-text {
+    font-size: 36px
+  }
 }
+/* ----------- slide 4 media queries ----------- */
 
-/* hi-res laptops and desktops */
-@media screen and (min-width:1281px) {
+ @media screen and (min-width:1200px) {
+  .slide-5-header {
+    font-size: 65px
+  }
 }
-
-/* hi-res + */
-@media screen and (min-width:1500px) {
-}
-
-/* hi-res ++ */
-@media screen and (min-width:1900px) {
+@media screen and (min-width:1200px) {
+  .slide-5-text {
+    font-size: 32px
+  }
 }
